Mostly made Exception Handling. Main.java is now rock solid and can't throw an unhandled Exception. Also, Discount is now a class; it makes the code more dynamic.